 * #938 (DistributionFactory::buildEstimator to handle Exception)
 * #939 (The help of the getMaximumDegreeStrataIndex method is wrong.)
 * #941 (Duplicate with SobolIndicesExperiment)
 * #944 (Inline plots crash in notebooks if too many points)
 * #945 (build fails with cmake 3.11)
 * #946 (OT via anaconda, usage of ot.HypothesisTest error: R_EXECUTABLE-NOTFOUND)

== 1.10 release (2017-11-13) == #release-1.10

=== Library ===

==== Major changes ====
 * It is now possible to define numerical model acting on either Point or Field
   to produce either Point or Field.
   The Python binding has been extended to allow the user to define such
   functions based on either a Python function or a Python class.
   All the possible compositions have been implemented.

==== New classes ====
 * ProbabilitySimulation
 * SobolIndicesExperiment
 * VertexFunction
 * FieldToPointFunction
 * FieldToPointFunctionImplementation
 * PythonFieldToPointFunction
 * OpenTURNSPythonFieldToPointFunction
 * PointToFieldFunction
 * PointToFieldFunctionImplementation
 * PythonPointToFieldFunction
 * OpenTURNSPythonPointToFieldFunction
 * KarhunenLoeveLifting
 * KarhunenLoeveProjection
 * PointToPointEvaluation
 * PointToPointConnection
 * PointToFieldConnection
 * FieldToFieldConnection
 * FieldToPointConnection

==== API changes ====
 * Removed deprecated LAR class
 * Remove deprecated Function::GetValidConstants|GetValidFunctions|GetValidOperators
 * Removed deprecated TemporalNormalProcess, SpectralNormalProcess classes
 * Removed deprecated GeneralizedLinearModelAlgorithm, GeneralizedLinearModelResult classes
 * Removed deprecated DynamicalFunction, SpatialFunction, TemporalFunction classes
 * Removed deprecated KarhunenLoeveP1Factory, KarhunenLoeveQuadratureFactory classes
 * Removed deprecated GramSchmidtAlgorithm, ChebychevAlgorithm classes
 * Removed [gs]etOptimizationSolver methods
 * Removed CovarianceModel::compute{AsScalar,StandardRepresentative} overloads